Fixed values__paragraph bug where scrollbar appears

--- a/src/components/Values/Values.module.css
+++ b/src/components/Values/Values.module.css
@@ -5,6 +5,7 @@
     margin-left: 30vw;
     padding-right: 1%;
     flex-direction: column;
+
 }
 
 .values__title-container{
@@ -22,17 +23,21 @@
     width: 100%;
     justify-content: flex-end;
     padding-bottom:5rem;
+
 }
 .values__paragraph-container--left{
     display: flex;
     width: 100%;
+
     justify-content: flex-start;
     padding-bottom:5rem;
 }
-.values__paragraph{
-    flex:.5;
+.values__paragraph {
+    width: 50%;
     overflow: hidden;
-}
+    word-break: break-word;
+  }
+  
 @media (max-width: 550px){
     .values{
         margin-left: 3rem;
